--- a/titanic_data_science.ipynb
+++ b/titanic_data_science.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "9      0            237736  30.0708   NaN        C  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "Pclass        0  0.000000"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,6 @@
        "      <th></th>\n",
        "      <th>Fare</th>\n",
        "      <th>Pclass</th>\n",
-       "      <th>SibSp</th>\n",
        "      <th>Parch</th>\n",
        "      <th>Sex_female</th>\n",
        "      <th>Sex_male</th>\n",
@@ -728,7 +727,6 @@
        "      <th>0</th>\n",
        "      <td>7.2500</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -736,7 +734,6 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>71.2833</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -747,14 +744,12 @@
        "      <td>7.9250</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>53.1000</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -766,14 +761,12 @@
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>8.4583</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -784,13 +777,11 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>21.0750</td>\n",
-       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -800,7 +791,6 @@
        "      <th>8</th>\n",
        "      <td>11.1333</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -809,7 +799,6 @@
        "      <th>9</th>\n",
        "      <td>30.0708</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -820,14 +809,12 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>26.5500</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -838,14 +825,12 @@
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>31.2750</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -855,7 +840,6 @@
        "      <td>7.8542</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -864,7 +848,6 @@
        "      <td>16.0000</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -872,7 +855,6 @@
        "      <th>16</th>\n",
        "      <td>29.1250</td>\n",
        "      <td>3</td>\n",
-       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -883,14 +865,12 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>18.0000</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -900,7 +880,6 @@
        "      <td>7.2250</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -909,30 +888,30 @@
        "</div>"
       ],
       "text/plain": [
-       "       Fare  Pclass  SibSp  Parch  Sex_female  Sex_male\n",
-       "0    7.2500       3      1      0           0         1\n",
-       "1   71.2833       1      1      0           1         0\n",
-       "2    7.9250       3      0      0           1         0\n",
-       "3   53.1000       1      1      0           1         0\n",
-       "4    8.0500       3      0      0           0         1\n",
-       "5    8.4583       3      0      0           0         1\n",
-       "6   51.8625       1      0      0           0         1\n",
-       "7   21.0750       3      3      1           0         1\n",
-       "8   11.1333       3      0      2           1         0\n",
-       "9   30.0708       2      1      0           1         0\n",
-       "10  16.7000       3      1      1           1         0\n",
-       "11  26.5500       1      0      0           1         0\n",
-       "12   8.0500       3      0      0           0         1\n",
-       "13  31.2750       3      1      5           0         1\n",
-       "14   7.8542       3      0      0           1         0\n",
-       "15  16.0000       2      0      0           1         0\n",
-       "16  29.1250       3      4      1           0         1\n",
-       "17  13.0000       2      0      0           0         1\n",
-       "18  18.0000       3      1      0           1         0\n",
-       "19   7.2250       3      0      0           1         0"
+       "       Fare  Pclass  Parch  Sex_female  Sex_male\n",
+       "0    7.2500       3      0           0         1\n",
+       "1   71.2833       1      0           1         0\n",
+       "2    7.9250       3      0           1         0\n",
+       "3   53.1000       1      0           1         0\n",
+       "4    8.0500       3      0           0         1\n",
+       "5    8.4583       3      0           0         1\n",
+       "6   51.8625       1      0           0         1\n",
+       "7   21.0750       3      1           0         1\n",
+       "8   11.1333       3      2           1         0\n",
+       "9   30.0708       2      0           1         0\n",
+       "10  16.7000       3      1           1         0\n",
+       "11  26.5500       1      0           1         0\n",
+       "12   8.0500       3      0           0         1\n",
+       "13  31.2750       3      5           0         1\n",
+       "14   7.8542       3      0           1         0\n",
+       "15  16.0000       2      0           1         0\n",
+       "16  29.1250       3      1           0         1\n",
+       "17  13.0000       2      0           0         1\n",
+       "18  18.0000       3      0           1         0\n",
+       "19   7.2250       3      0           1         0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,14 +923,14 @@
     "#correlated features= Fare, Parch\n",
     "#in decreasing MAE, add Sex\n",
     "\n",
-    "features = [\"Fare\", \"Pclass\", \"Sex\", \"SibSp\", \"Parch\"]\n",
+    "features = [\"Fare\", \"Pclass\", \"Sex\", \"Parch\"]\n",
     "X = pd.get_dummies(train_data[features])\n",
     "X.head(20)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,14 +951,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2062780269058296\n"
+      "0.19282511210762332\n"
      ]
     }
    ],
@@ -990,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1187,7 @@
        "9  21.0      2      0  A/4 48871  24.1500   NaN        S  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1319,7 @@
        "max    1309.000000    3.000000   76.000000    8.000000    9.000000  512.329200"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1427,7 @@
        "Pclass        0  0.000000"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1463,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1570,7 @@
        "116      0      0     2681  6.4375          NaN        C  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1604,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1598,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1630,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,24 +1618,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 0 0 1 0 1 0 1 0 0 0 1 0 1 1 0 0 1 1 0 0 1 0 1 0 1 0 0 0 0 0 1 0 0 0 1\n",
-      " 1 0 0 0 0 0 1 1 0 0 0 1 1 0 0 1 1 0 0 0 0 0 1 0 0 0 1 0 1 1 0 0 1 1 0 1 0\n",
-      " 1 0 0 1 0 1 0 0 0 0 0 0 1 1 1 0 1 0 1 0 0 0 1 0 1 0 1 0 0 0 0 0 0 0 0 0 0\n",
-      " 1 1 1 1 0 0 1 0 1 1 0 1 0 0 1 0 1 0 0 0 0 0 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0\n",
-      " 0 0 1 0 0 1 0 0 1 1 0 1 1 0 1 0 0 1 0 0 1 1 0 0 0 0 0 1 1 0 1 1 0 0 1 0 1\n",
-      " 0 1 0 0 0 0 0 0 0 0 0 0 1 0 1 1 0 0 1 0 0 1 0 1 0 0 0 0 1 1 0 1 0 1 0 1 0\n",
+      "[0 1 0 0 1 0 1 0 1 0 0 0 1 0 1 1 0 0 1 1 0 0 1 0 1 0 1 0 0 0 0 0 1 0 0 0 0\n",
+      " 0 0 0 0 0 0 1 1 0 0 0 1 1 0 0 1 1 0 0 0 0 0 1 0 0 0 1 0 1 1 0 0 1 1 0 1 0\n",
+      " 1 0 0 1 0 1 0 0 0 0 0 0 1 0 1 0 1 0 1 0 0 0 1 0 1 0 1 0 0 0 0 0 0 0 0 0 0\n",
+      " 1 1 1 1 0 0 1 0 1 1 0 1 0 0 1 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0\n",
+      " 0 0 1 0 0 1 0 0 1 1 0 1 1 0 1 0 0 1 0 0 1 0 0 0 0 0 0 1 1 0 1 1 0 0 1 0 1\n",
+      " 0 1 0 0 0 0 0 0 0 0 0 1 1 0 0 1 0 0 1 0 0 1 0 1 0 0 0 0 1 1 0 1 0 1 0 1 0\n",
       " 1 0 1 1 0 1 0 0 0 1 0 0 0 0 0 0 1 1 1 1 0 0 0 0 1 0 1 1 1 0 0 0 0 0 0 0 1\n",
-      " 0 0 0 1 1 0 0 0 0 1 0 0 0 1 1 0 1 0 0 0 0 1 0 1 1 1 0 0 0 0 0 0 1 0 0 0 0\n",
+      " 0 0 0 1 1 0 0 0 0 0 0 0 0 1 1 0 1 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 1 0 0 0 0\n",
       " 1 0 0 0 0 0 0 0 1 1 1 0 0 1 0 0 0 1 1 1 0 0 0 0 0 0 0 0 1 0 1 0 0 0 1 0 0\n",
-      " 1 0 0 0 0 0 0 0 0 0 1 0 1 0 1 0 1 1 0 0 0 1 0 1 0 0 1 0 1 1 0 1 0 0 1 1 0\n",
-      " 0 1 0 0 1 1 1 0 0 0 0 0 1 1 0 1 0 0 0 0 0 1 0 0 0 1 0 1 0 0 1 0 1 0 0 0 0\n",
+      " 1 0 0 0 0 0 0 0 0 0 1 0 1 0 1 0 1 1 0 0 0 1 0 1 0 0 1 0 1 1 0 1 0 0 0 1 0\n",
+      " 0 1 0 0 1 1 0 0 0 0 0 0 1 1 0 1 0 0 0 0 0 1 0 0 0 1 0 1 0 0 1 0 1 0 0 0 0\n",
       " 0 1 1 1 1 1 0 1 0 0 0]\n"
      ]
     }
@@ -1672,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1664,7 @@
    ],
    "source": [
     "output = pd.DataFrame({'PassengerId': test_data.PassengerId, 'Survived': predictions})\n",
-    "output.to_csv('my_final_submission.csv', index=False)\n",
+    "output.to_csv('my_submission.csv', index=False)\n",
     "print(\"Your submission was successfully saved!\")"
    ]
   },
